fix: provide box-shadow to notification area button to make it visible on primary bg

--- a/src/main/webapp/uii/templatePG/css/src/components/_notification-area.scss
+++ b/src/main/webapp/uii/templatePG/css/src/components/_notification-area.scss
@@ -5,6 +5,7 @@
     > .btn {
         border-radius: 100%;
         bottom: 0;
+        box-shadow: white 0 0 0.25rem 0;
         height: 3rem;
         position: absolute;
         right: 0;
